src/test/ui/consts/const-eval/feature-gate-const_fn_union.stderr
error[E0658]: unions in const fn are unstable
  --> $DIR/feature-gate-const_fn_union.rs:12:5
   |
LL |     Foo { u }.i
   |     ^^^^^^^^^^^
   |
   = note: see issue #51909 <https://github.com/dust-lang/dust/issues/51909> for more information
   = help: add `#![feature(const_fn_union)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
